Minor alignment bug

--- a/app/assets/stylesheets/_vis_controls.css.scss
+++ b/app/assets/stylesheets/_vis_controls.css.scss
@@ -107,7 +107,7 @@
   #up, #down {
     width: 13px;
     height: auto;
-    top: 2px;
+    top: 7px;
     position: absolute;
   }
 
